--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -19,7 +19,6 @@ body {
 	color: var(--font-color);
 	font-family: Arial, Helvetica, sans-serif;
 	line-height: 1.5;
-	padding-bottom: 2rem;
 }
 
 h1,
@@ -36,10 +35,10 @@ p {
 	margin-block: 1rem;
 }
 
-a {
+a,
+button {
 	text-underline-offset: 2px;
 	color: inherit;
-	outline-offset: 2px;
 }
 
 button,
@@ -56,6 +55,7 @@ button {
 
 :is(a, button, input):focus-visible {
 	outline: 1px solid white;
+	outline-offset: 2px;
 }
 
 .button {
