--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -11,7 +11,7 @@
 	--button-color: #188925;
 	--outline-color: #444;
 	--secondary-bg-color: #111;
-	--card-color: #2a2b2a;
+	--card-color: #2d2f2f;
 }
 
 body {
